NetBSD Problem Report #44279

From jakllsch@siwenna.kollasch.net  Sat Dec 25 21:20:21 2010
Return-Path: <jakllsch@siwenna.kollasch.net>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 779A463B8B5
	for <gnats-bugs@gnats.NetBSD.org>; Sat, 25 Dec 2010 21:20:21 +0000 (UTC)
Message-Id: <20101225212020.26FF2106A80@siwenna.kollasch.net>
Date: Sat, 25 Dec 2010 21:20:20 +0000 (UTC)
From: jakllsch@kollasch.net
Reply-To: jakllsch@kollasch.net
To: gnats-bugs@gnats.NetBSD.org
Subject: Logitech C260
X-Send-Pr-Version: 3.95

>Number:         44279
>Category:       kern
>Synopsis:       Logitech C260 uaudio(4) non-functional
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Dec 25 21:25:00 +0000 2010
>Closed-Date:    Sun Apr 22 17:43:42 +0000 2012
>Last-Modified:  Sun Apr 22 17:43:42 +0000 2012
>Originator:     Jonathan A. Kollasch
>Release:        NetBSD 5.1_RC1
>Organization:

>Environment:


System: NetBSD siwenna.kollasch.net 5.1_RC1 NetBSD 5.1_RC1 (SIWENNA) #35: Sat Dec 25 04:21:37 UTC 2010 root@siwenna.kollasch.net:/local/siwenna/20100403/src/sys/arch/i386/compile/SIWENNA i386
Architecture: i386
Machine: i386
>Description:
The C260's audio class descriptors cause uaudio(4) to bail out at line 1897
of uaudio.c 1.119.  The descriptors show "acdp->wTotalLength" to be one less
than the actual length of the descriptor chain.

Additionally, after avoiding that sanity check, the quirk for the Roland SD-90
implemented at line 2630 causes the device to not provide any samples when
recording. The SAMPLING_FREQ_CONTROL request is apparently required for this
one-rate device to work.
>How-To-Repeat:
Plug a in Logitech C260, attempt to audiorecord(1) from its microphone.
>Fix:
...

>Release-Note:

>Audit-Trail:
From: "Jonathan A. Kollasch" <jakllsch@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/44279 CVS commit: src/sys/dev/usb
Date: Tue, 28 Dec 2010 20:11:18 +0000

 Module Name:	src
 Committed By:	jakllsch
 Date:		Tue Dec 28 20:11:18 UTC 2010

 Modified Files:
 	src/sys/dev/usb: uaudio.c

 Log Message:
 Address PR#44279.

 - Be more lenient to device descriptor inconsistencies.
 - Apply Roland SD-90 quirk only to the SD-90.


 To generate a diff of this commit:
 cvs rdiff -u -r1.119 -r1.120 src/sys/dev/usb/uaudio.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Mon, 22 Aug 2011 01:21:01 +0000
State-Changed-Why:
Is this fixed?


State-Changed-From-To: feedback->pending-pullups
State-Changed-By: jakllsch@NetBSD.org
State-Changed-When: Sun, 01 Apr 2012 14:26:07 +0000
State-Changed-Why:
pullup-5 #1746


From: "Jeff Rizzo" <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/44279 CVS commit: [netbsd-5] src/sys/dev/usb
Date: Sat, 21 Apr 2012 15:57:28 +0000

 Module Name:	src
 Committed By:	riz
 Date:		Sat Apr 21 15:57:28 UTC 2012

 Modified Files:
 	src/sys/dev/usb [netbsd-5]: uaudio.c

 Log Message:
 Pull up following revision(s) (requested by jakllsch in ticket #1746):
 	sys/dev/usb/uaudio.c: revision 1.120
 Address PR#44279.
 - Be more lenient to device descriptor inconsistencies.
 - Apply Roland SD-90 quirk only to the SD-90.


 To generate a diff of this commit:
 cvs rdiff -u -r1.114 -r1.114.6.1 src/sys/dev/usb/uaudio.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sun, 22 Apr 2012 17:43:42 +0000
State-Changed-Why:
pulled up.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.