Address PR#44279.

- Be more lenient to device descriptor inconsistencies.
- Apply Roland SD-90 quirk only to the SD-90.